[gd_scene load_steps=4 format=3 uid="uid://d4dylxevxt66t"]

[ext_resource type="Script" path="res://scripts/entities/player.gd" id="1_a3esx"]
[ext_resource type="PackedScene" uid="uid://bwac45sem0ne7" path="res://entities/characters/gero.tscn" id="2_ovu68"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_irlrm"]
radius = 0.2
height = 0.75

[node name="Player" type="CharacterBody3D"]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_a3esx")

[node name="Gero" parent="." instance=ExtResource("2_ovu68")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.375, 0)
shape = SubResource("CapsuleShape3D_irlrm")

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timeout"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_restart_timeout"]
